<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/convertingMode" >
        <CheckBoxPreference
    android:key="safeMode"
    android:title="@string/prefSafeModeTitle"
	android:summary="@string/prefSafeModeSummaryText"
	android:defaultValue="true"/>    
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/showSource" >
        <CheckBoxPreference
    android:key="showSource"
    android:title="@string/prefShowSourceTitle"
	android:summary="@string/prefShowSourceSummaryText"
	android:defaultValue="true"/>    
    </PreferenceCategory>
	
    <PreferenceCategory android:title="@string/passMode" >
        <CheckBoxPreference
    android:key="passMode"
    android:title="@string/prefPassModeTitle"
	android:summary="@string/prefPassModeSummaryText"
	android:defaultValue="false"/>    
    </PreferenceCategory>
    
</PreferenceScreen>
